# moegal-honyaku

./: .env.example  .env.template  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt  start.cmd
api/: api_v1.py  ocr.py  translate_api.py
app/: main.py
app/api/routes/: __init__.py  manga_translate.py  update_conf.py
app/core/: custom_conf.py  font_conf.py  logger.py  model_sync.py  paths.py
app/services/: ocr.py  pic_process.py  translate_api.py  web_image_input.py
assets/: models_manifest.txt
docs/: quick_start.md
routes/: manga_translate.py  update_conf.py
utils/: custom_conf.py  font_conf.py  logger.py  pic_process.py
